# lanis_api

./: .gitignore  BUILD_SUMMARY.md  IMPLEMENTATION_CHECKLIST.md  README.md  README_TUI.md  TUI_OVERVIEW.md  TUI_QUICKSTART.md  api-documentation.md  api-tests.py  api.py  decompress.ps1  deploy.sh  docs_extractor.py  get_homework.py  lanis-api.service  pyproject.toml  reproduce_issue.py  reproduce_issue_v2.py  requirements.txt  task_queue.py  template-readme.md  user-metrics-idea.md  user_metrics_db.py
.github/: copilot-instructions.md
.github/workflows/: pypi.yml  update-docs.yml
CLI/: README.md  __init__.py
api/: __init__.py  api.py  auth_db.py  documentation.py  dsb_snapshot.py  file_cache.py  semantic_search.py
api/metrics/: __init__.py  user_metrics_db.py
api/queue/: __init__.py  task_queue.py
api/templates/: documentation_endpoint.html  documentation_index.html
data/: user_metrics.db
docs/: API.md
functions/: __init__.py  base.py
functions/tools/: cryptor.py  find_available_apps.py
schulportal_hessen/: __init__.py  base.py
schulportal_hessen/tools/: cryptor.py  search.py
scripts/data/: .gitignore
scripts/dsb_tracking/: __init__.py  fetch_substitution_plan.py  query_substitution.py  run.sh  (+1 more)
sph_client/: __init__.py
sph_client.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
temp/: meinuntericht.php-response.html  meinuntericht_detail.html  read.js  response_get_read.html
tui/: ADVANCED.md  DESIGN_SYSTEM.md  QUICK_REFERENCE.md  README.md  lanis.js  package-lock.json  package.json  setup.bat  setup.sh  tsconfig.json
(+42 files in other folders)
